--- a/Blog_application/src/main/resources/application.properties
+++ b/Blog_application/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=9090
+server.port=8080
 
 
 #db configuration
@@ -18,5 +18,9 @@ spring.servlet.multipart.max-request-size=10MB
 project.image=images/
 
 logging.level.org.springframework.security=DEBUG
+
+spring.security.user.name=rahul
+spring.security.user.password=rahul
+spring.security.user.roles=ADMIN
 
 
